Fix layout issue of cells component

--- a/src/app/page-features/components/guis/cells/cells.component.scss
+++ b/src/app/page-features/components/guis/cells/cells.component.scss
@@ -4,9 +4,9 @@
 	display: flex;
 	width: 100%;
 	height: 300px;
-	max-width: 600px;
 	overflow: auto;
 	border: 1px solid colors.$black;
+	position: relative;
 }
 
 .cells {
@@ -15,6 +15,7 @@
 	--row-header-width: 40px;
 
 	min-width: calc(var(--cell-width) * var(--row-size) + var(--row-header-width));
+	position: absolute;
 	border-spacing: 0;
 
 	&__header-cell {
